refractor: mod wrong refs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="searchIp">
         <input type="text" placeholder="Enter your IP address here" />
         <button>
-          <img src="../images/icon-arrow.svg" alt="arrow" />
+          <img src="./images/icon-arrow.svg" alt="arrow" />
         </button>
       </div>
     </div>
@@ -52,5 +52,5 @@
     </div>
     <div id="map"></div>
   </body>
-  <script type="module" src="../controllers/getLocation.js"></script>
+  <script type="module" src="./controllers/getLocation.js"></script>
 </html>
